# nixcr

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  default.nix  package.nix  shell.nix  test.nix
k8/: nix-store-gcs-proxy.deployment.yaml  nix-store-gcs-proxy.service.yaml  service.yaml  statefulset.yaml  testpod.yaml
src/: main.rs  store.rs  tarsum.rs
