[package]
name = "nixcr"
version = "0.1.0"
authors = ["Tom Hunger <tehunger@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.7"
lru-disk-cache = "0.3.0"
serde = "1.0.101"
serde_json = "1.0.40"
tar = "0.4.26"
rust-crypto = "0.2.36"
actix-files = "0.1.4"
env_logger = "0.7.0"
log = "0.4.8"
docopt = "1.1.0"
regex = "1.3.1"
tempfile = "3.1.0"
#count-min-sketch = "0.1.5"
